# rust-lambda-example

./: Cargo.toml  LICENSE  README.md  lambda-ify.sh
src/: main.rs
