[package]
name = "rust-lambda-example"
version = "0.1.0"
authors = ["Michael Edwards <medwards@walledcity.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#lambda_runtime = { git = "https://github.com/awslabs/aws-lambda-rust-runtime.git", package = "lambda" }
lambda_runtime = "0.2.1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
simple_logger = "1"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
